--- a/extensions/xmlsecurity/runtime/pom.xml
+++ b/extensions/xmlsecurity/runtime/pom.xml
@@ -41,8 +41,8 @@
             <artifactId>quarkus-jaxp</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkiverse.xmlsec</groupId>
-            <artifactId>quarkus-xmlsec</artifactId>
+            <groupId>io.quarkiverse.cxf</groupId>
+            <artifactId>quarkus-cxf-santuario-xmlsec</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
