feat(camel-k): add options to override some aspects of a route

--- a/integration-tests/camel-k-runtime-model-reifier/src/main/resources/application.properties
+++ b/integration-tests/camel-k-runtime-model-reifier/src/main/resources/application.properties
@@ -18,7 +18,13 @@
 #
 # Quarkus
 #
-quarkus.banner.enabled     = false
+quarkus.banner.enabled = false
 
 # disable kubernetes dev services as none of the test requires it.
 quarkus.kubernetes-client.devservices.enabled = false
+
+# enable logging for ApplicationRoutes so the routes endpoint override will be
+# visible in the logs for troubleshooting
+quarkus.log.category."org.apache.camel.quarkus.k.runtime.ApplicationRoutes".level = DEBUG
+
+quarkus.native.resources.includes = routes.yaml
