--- a/integration-tests/jasypt/pom.xml
+++ b/integration-tests/jasypt/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>quarkus-test-h2</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-integration-test-support</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -199,6 +204,46 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>fips</id>
+            <activation>
+                <property>
+                    <name>fips</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>**/JasyptFipsTest*</include>
+                            </includes>
+                            <systemPropertyVariables>
+                                <quarkus.datasource.devservices.enabled>false</quarkus.datasource.devservices.enabled>
+                                <quarkus.camel.jasypt.random-iv-generator-algorithm>PKCS11</quarkus.camel.jasypt.random-iv-generator-algorithm>
+                                <quarkus.camel.jasypt.random-salt-generator-algorithm>PKCS11</quarkus.camel.jasypt.random-salt-generator-algorithm>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>**/JasyptFipsIT*</include>
+                            </includes>
+                            <systemPropertyVariables>
+                                <quarkus.datasource.devservices.enabled>false</quarkus.datasource.devservices.enabled>
+                                <quarkus.camel.jasypt.random-iv-generator-algorithm>PKCS11</quarkus.camel.jasypt.random-iv-generator-algorithm>
+                                <quarkus.camel.jasypt.random-salt-generator-algorithm>PKCS11</quarkus.camel.jasypt.random-salt-generator-algorithm>
+                            </systemPropertyVariables>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
