--- a/integration-tests/camel-k-runtime-model-reifier/src/main/resources/application.properties
+++ b/integration-tests/camel-k-runtime-model-reifier/src/main/resources/application.properties
@@ -27,4 +27,4 @@ quarkus.kubernetes-client.devservices.enabled = false
 # visible in the logs for troubleshooting
 quarkus.log.category."org.apache.camel.quarkus.k.runtime.ApplicationRoutes".level = DEBUG
 
-quarkus.native.resources.includes = routes.yaml
+quarkus.native.resources.includes = routes/*.yaml
