--- a/integration-tests/camel-k-runtime/src/main/resources/application.properties
+++ b/integration-tests/camel-k-runtime/src/main/resources/application.properties
@@ -22,3 +22,6 @@ quarkus.banner.enabled     = false
 
 # disable kubernetes dev services as none of the test requires it.
 quarkus.kubernetes-client.devservices.enabled = false
+
+# include routes as now they are loaded using the camel.main.routes-include-pattern property
+quarkus.native.resources.includes = routes/*.xml,routes/*.yaml
