--- a/extensions-jvm/beanio/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions-jvm/beanio/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -24,6 +24,7 @@
 name: "Camel BeanIO"
 description: "Marshal and unmarshal Java beans to and from flat files (such as CSV, delimited, or fixed length formats)"
 metadata:
+  icon-url: "https://raw.githubusercontent.com/apache/camel-website/main/antora-ui-camel/src/img/logo-d.svg"
   unlisted: true
   guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/beanio.html"
   categories:
