--- a/extensions/jt400/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/jt400/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -25,9 +25,8 @@ name: "Camel JT400"
 description: "Exchanges messages with an IBM i system using data queues, message queues, or program call. IBM i is the replacement for AS/400 and iSeries servers"
 metadata:
   icon-url: "https://raw.githubusercontent.com/apache/camel-website/main/antora-ui-camel/src/img/logo-d.svg"
-  unlisted: true
   guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/jt400.html"
   categories:
   - "integration"
   status:
-  - "preview"
+  - "stable"
