feat(camel-k): add option to shutdown the context on exchange completion

--- a/tooling/test-list/pom.xml
+++ b/tooling/test-list/pom.xml
@@ -65,6 +65,7 @@
                                 <exclude>main-unknown-args-ignore/pom.xml</exclude>
                                 <exclude>messaging/pom.xml</exclude>
                                 <exclude>quartz-clustered/pom.xml</exclude>
+                                <exclude>camel-k-runtime-shutdown/pom.xml</exclude>
                             </excludes>
                         </fileSet>
                     </fileSets>
