--- a/tooling/scripts/test-categories.yaml
+++ b/tooling/scripts/test-categories.yaml
@@ -210,6 +210,7 @@ group-13:
   - box
   - camel-k-runtime
   - camel-k-runtime-model-reifier
+  - camel-k-runtime-shutdown
   - fhir
   - github
   - google
