--- a/integration-tests/jt400/pom.xml
+++ b/integration-tests/jt400/pom.xml
@@ -30,6 +30,22 @@
     <name>Camel Quarkus :: Integration Tests :: JT400</name>
     <description>Integration tests for Camel Quarkus JT400 extension</description>
 
+    <properties>
+        <quarkus.test.flat-class-path>true</quarkus.test.flat-class-path>
+    </properties>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>application.properties</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
@@ -38,6 +54,10 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-jackson</artifactId>
         </dependency>
 
         <!-- test dependencies -->
@@ -104,6 +124,19 @@
                     </exclusions>
                 </dependency>
             </dependencies>
+        </profile>
+        <profile>
+            <!-- Mock tests require flat classpath, which are enabled by default.
+                 This profile disables flat classpath-->
+            <id>skip-mock-tests</id>
+            <activation>
+                <property>
+                    <name>skip-mock-tests</name>
+                </property>
+            </activation>
+            <properties>
+                <quarkus.test.flat-class-path>false</quarkus.test.flat-class-path>
+            </properties>
         </profile>
     </profiles>
 
