Upgrade Quarkus to 3.9.0.CR1

--- a/extensions/google-bigquery/runtime/pom.xml
+++ b/extensions/google-bigquery/runtime/pom.xml
@@ -75,6 +75,10 @@
             <artifactId>grpc-netty</artifactId>
             <exclusions>
                 <exclusion>
+                    <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>com.google.android</groupId>
                     <artifactId>annotations</artifactId>
                 </exclusion>
