--- a/extensions/grpc/runtime/pom.xml
+++ b/extensions/grpc/runtime/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>quarkus-grpc-common</artifactId>
             <exclusions>
                 <exclusion>
+                    <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>io.quarkus</groupId>
                     <artifactId>quarkus-vertx</artifactId>
                 </exclusion>
@@ -54,6 +58,10 @@
                 <exclusion>
                     <groupId>io.vertx</groupId>
                     <artifactId>vertx-grpc-server</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
