--- a/extensions/js-dsl/runtime/pom.xml
+++ b/extensions/js-dsl/runtime/pom.xml
@@ -46,6 +46,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-js-dsl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js-language</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
