--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -1611,6 +1611,12 @@
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-js-dsl</artifactId>
                 <version>${camel.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.graalvm.js</groupId>
+                        <artifactId>js</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -6743,7 +6749,7 @@
             </dependency>
             <dependency>
                 <groupId>org.graalvm.js</groupId>
-                <artifactId>js</artifactId>
+                <artifactId>js-language</artifactId>
                 <version>${graalvm.version}</version>
             </dependency>
             <dependency>
