--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,7 +31,9 @@ updates:
       - dependency-name: "io.quarkiverse.*:*"
       # Other third party extensions
       - dependency-name: "com.hazelcast:quarkus-hazelcast-client-bom"
+      - dependency-name: "com.squareup.okhttp3:okhttp"
       - dependency-name: "org.amqphub.quarkus:quarkus-qpid-jms-bom"
+      - dependency-name: "org.jolokia:jolokia-jvm"
       # Test dependencies
       - dependency-name: "com.github.tomakehurst:wiremock"
       - dependency-name: "com.unboundid:unboundid-ldapsdk"
