Manage software.amazon.awssdk:endpoints-spi

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -7040,6 +7040,11 @@
             </dependency>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
+                <artifactId>endpoints-spi</artifactId>
+                <version>${awssdk.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
                 <artifactId>http-auth-aws</artifactId>
                 <version>${awssdk.version}</version>
             </dependency>
