Clean up camel-k extension leftovers and add option to shutdown the context on exchange completion
* Clean up camel-k extension leftovers

- interceptors are not more needed
- customizers are not more needed
- custom source loader not more needed and replaced with camel.main.routes-include-pattern
- custom "Runtime" not more needed

* Clean up camel-k extension leftovers (poms)

* feat(camel-k): add option to shutdown the context on exchange completion

--- a/integration-tests/camel-k-runtime-shutdown/src/main/resources/application.properties
+++ b/integration-tests/camel-k-runtime-shutdown/src/main/resources/application.properties
@@ -18,10 +18,12 @@
 #
 # Quarkus
 #
-quarkus.banner.enabled     = false
+quarkus.banner.enabled = false
+
+# enable debug logggin for camle-k to gather some additional details
+quarkus.log.category."org.apache.camel.quarkus.k.runtime".level = DEBUG
 
 # disable kubernetes dev services as none of the test requires it.
 quarkus.kubernetes-client.devservices.enabled = false
 
-# include routes as now they are loaded using the camel.main.routes-include-pattern property
-quarkus.native.resources.includes = routes/*.xml,routes/*.yaml
+quarkus.native.resources.includes = routes/*.yaml
