Add multipart configuration options to servlet extension
Fixes #5326

--- a/integration-tests/servlet/src/main/resources/application.properties
+++ b/integration-tests/servlet/src/main/resources/application.properties
@@ -19,7 +19,13 @@
 # Quarkus :: Camel :: Servlet
 #
 quarkus.camel.servlet.url-patterns=/folder-1/*,/folder-2/*
+
 quarkus.camel.servlet.my-named-servlet.url-patterns=/my-named-folder/*
 quarkus.camel.servlet.my-named-servlet.servlet-class=org.apache.camel.quarkus.component.servlet.CustomServlet
+quarkus.camel.servlet.my-named-servlet.multipart.location=${java.io.tmpdir}/my-named-servlet
+quarkus.camel.servlet.my-named-servlet.multipart.max-file-size=11
+quarkus.camel.servlet.my-named-servlet.multipart.max-request-size=11
+quarkus.camel.servlet.my-named-servlet.multipart.file-size-threshold=5
+
 quarkus.camel.servlet.ignored-key.servlet-name=my-favorite-servlet
 quarkus.camel.servlet.ignored-key.url-patterns=/my-favorite-folder/*
