Support loadOnStartup, async, forceAwait & executorRef configuration options
Fixes #5834

--- a/integration-tests/servlet/src/main/resources/application.properties
+++ b/integration-tests/servlet/src/main/resources/application.properties
@@ -15,17 +15,39 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-#
-# Quarkus :: Camel :: Servlet
-#
-quarkus.camel.servlet.url-patterns=/folder-1/*,/folder-2/*
+# Default servlet configuration
+quarkus.camel.servlet.url-patterns=/folder-1/*,/folder-2/*,/debug/*
 
-quarkus.camel.servlet.my-named-servlet.url-patterns=/my-named-folder/*
-quarkus.camel.servlet.my-named-servlet.servlet-class=org.apache.camel.quarkus.component.servlet.CustomServlet
-quarkus.camel.servlet.my-named-servlet.multipart.location=${java.io.tmpdir}/my-named-servlet
-quarkus.camel.servlet.my-named-servlet.multipart.max-file-size=11
-quarkus.camel.servlet.my-named-servlet.multipart.max-request-size=11
-quarkus.camel.servlet.my-named-servlet.multipart.file-size-threshold=5
+# Explicit definition of the servlet name
+quarkus.camel.servlet.ignored-key.servlet-name=my-named-servlet
+quarkus.camel.servlet.ignored-key.url-patterns=/my-named-folder/*
 
-quarkus.camel.servlet.ignored-key.servlet-name=my-favorite-servlet
-quarkus.camel.servlet.ignored-key.url-patterns=/my-favorite-folder/*
+# Custom servlet class
+quarkus.camel.servlet.custom-servlet.url-patterns=/my-custom-folder/*
+quarkus.camel.servlet.custom-servlet.servlet-class=org.apache.camel.quarkus.component.servlet.CustomServlet
+
+# Servlet configured with multipart support
+quarkus.camel.servlet.multipart-servlet.url-patterns=/multipart-servlet/*
+quarkus.camel.servlet.multipart-servlet.multipart.location=${java.io.tmpdir}/my-named-servlet
+quarkus.camel.servlet.multipart-servlet.multipart.max-file-size=11
+quarkus.camel.servlet.multipart-servlet.multipart.max-request-size=11
+quarkus.camel.servlet.multipart-servlet.multipart.file-size-threshold=5
+
+# Servlet configured for eager initialization
+quarkus.camel.servlet.eager-init-servlet.url-patterns=/eager-init-servlet/*
+quarkus.camel.servlet.eager-init-servlet.load-on-startup=1
+
+# Servlet configured for async processing
+quarkus.camel.servlet.async-servlet.url-patterns=/async-servlet/*
+quarkus.camel.servlet.async-servlet.async=true
+
+# Servlet configured for async + sync processing
+quarkus.camel.servlet.sync-async-servlet.url-patterns=/sync-async-servlet/*
+quarkus.camel.servlet.sync-async-servlet.async=true
+quarkus.camel.servlet.sync-async-servlet.force-await=true
+
+# Servlet with custom executor
+quarkus.camel.servlet.custom-executor-servlet.url-patterns=/custom-executor/*
+quarkus.camel.servlet.custom-executor-servlet.async=true
+quarkus.camel.servlet.custom-executor-servlet.executor-ref=customServletExecutor
+
