Add additional Servlet test coverage

--- a/integration-tests/servlet/src/main/resources/application.properties
+++ b/integration-tests/servlet/src/main/resources/application.properties
@@ -15,6 +15,9 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
+# For transferException
+quarkus.camel.native.reflection.serialization-enabled=true
+
 # Default servlet configuration
 quarkus.camel.servlet.url-patterns=/folder-1/*,/folder-2/*,/debug/*
 
@@ -51,3 +54,6 @@ quarkus.camel.servlet.custom-executor-servlet.url-patterns=/custom-executor/*
 quarkus.camel.servlet.custom-executor-servlet.async=true
 quarkus.camel.servlet.custom-executor-servlet.executor-ref=customServletExecutor
 
+# Servlet to allow OPTIONS & TRACE
+quarkus.camel.servlet.options-method-servlet.url-patterns=/method-options/*
+quarkus.camel.servlet.trace-method-servlet.url-patterns=/method-trace/*
