--- a/docs/modules/ROOT/examples/components/stomp.yml
+++ b/docs/modules/ROOT/examples/components/stomp.yml
@@ -9,5 +9,5 @@ cqJvmSince: 1.1.0
 cqNativeSince: n/a
 cqCamelPartName: stomp
 cqCamelPartTitle: Stomp
-cqCamelPartDescription: Send and rececive messages to/from STOMP (Simple Text Oriented Messaging Protocol) compliant message brokers.
+cqCamelPartDescription: Send and receive messages to/from STOMP (Simple Text Oriented Messaging Protocol) compliant message brokers.
 cqExtensionPageTitle: Stomp
