--- a/integration-tests/infinispan-quarkus-client/pom.xml
+++ b/integration-tests/infinispan-quarkus-client/pom.xml
@@ -70,6 +70,7 @@
 
 
     <profiles>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5844
         <profile>
             <id>native</id>
             <activation>
@@ -97,6 +98,7 @@
                 </plugins>
             </build>
         </profile>
+        -->
         <profile>
             <id>virtualDependencies</id>
             <activation>
