Exclude CloudEvents transformer services unless camel-quarkus-cloudevents is on the classpath
Fixes #5853

--- a/extensions/cloudevents/runtime/pom.xml
+++ b/extensions/cloudevents/runtime/pom.xml
@@ -51,6 +51,11 @@
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-extension-maven-plugin</artifactId>
+                <configuration>
+                    <capabilities>
+                        <provides>org.apache.camel.cloudevents</provides>
+                    </capabilities>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
