--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -147,7 +147,7 @@ jobs:
           git clone --depth 1 --branch main https://github.com/apache/camel.git \
             && cd camel \
             && echo "Current Camel commit:" $(git rev-parse HEAD) \
-            && ./mvnw ${CQ_MAVEN_ARGS} clean install -Dquickly
+            && ./mvnw ${CQ_MAVEN_ARGS} clean install -Dquickly -T1C
       - name: Build Quarkus
         if: github.ref == 'refs/heads/quarkus-main' || github.base_ref == 'quarkus-main'
         run: |
@@ -155,7 +155,7 @@ jobs:
             && cd quarkus \
             && echo "Current Quarkus commit:" $(git rev-parse HEAD) \
             && sed -i '/<module>integration-tests<\/module>/d' pom.xml \
-            && ./mvnw ${CQ_MAVEN_ARGS} clean install -Dquickly
+            && ./mvnw ${CQ_MAVEN_ARGS} clean install -Dquickly -T1C
       - name: Checkout
         uses: actions/checkout@v4
         with:
