jt400: extend test coverage

--- a/integration-tests/jt400/src/main/resources/application.properties
+++ b/integration-tests/jt400/src/main/resources/application.properties
@@ -15,3 +15,15 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 quarkus.test.flat-class-path = ${quarkus.test.flat-class-path}
+
+#jt400 server connection information
+cq.jt400.url=${JT400_URL:system}
+cq.jt400.username=${JT400_USERNAME:username}
+cq.jt400.password=${JT400_PASSWORD:password}
+
+#jt400 custom objects for testing
+cq.jt400.library=${JT400_LIBRARY:REDHAT5}
+cq.jt400.user-space=${JT400_USER_SPACE:PROGCALL}
+cq.jt400.message-queue=${JT400_MESSAGE_QUEUE:TESTMSGQ.MSGQ}
+cq.jt400.keyed-queue=${JT400_KEYED_QUEUE:TESTKEYED.DTAQ}
+cq.jt400.lifo-queue=${JT400_LIFO_QUEUE:TESTLIFO.DTAQ}
