Cache PDFBox font cache on Windows to speed up the build
Fixes #5776

--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -464,6 +464,12 @@ jobs:
         run: |
           tar -xzf ../maven-repo.tgz -C ~
           rm -f ../maven-repo.tgz
+      - name: PDFBox font cache
+        uses: actions/cache@v4
+        if: runner.os == 'Windows'
+        with:
+          path: ~/.pdfbox.cache
+          key: ${{ runner.os }}-pdfbox-cache
       - name: cd integration-tests && mvn clean verify
         shell: bash
         run: |
