--- a/integration-test-groups/pom.xml
+++ b/integration-test-groups/pom.xml
@@ -42,7 +42,8 @@
         <module>aws2-quarkus-client</module>
         <module>azure</module>
         <module>compression</module>
-        <module>cxf-soap</module>
+        <!-- TODO: Reinstate this: https://github.com/apache/camel-quarkus/issues/5926 -->
+        <!-- <module>cxf-soap</module> -->
         <module>dataformats-json</module>
         <module>foundation</module>
         <module>http</module>
