--- a/extensions-support/consul-client/runtime/pom.xml
+++ b/extensions-support/consul-client/runtime/pom.xml
@@ -43,7 +43,7 @@
         </dependency>
         <dependency>
             <groupId>org.graalvm.sdk</groupId>
-            <artifactId>graal-sdk</artifactId>
+            <artifactId>nativeimage</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
