--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -202,6 +202,7 @@
         <module>platform-http</module>
         <module>protobuf</module>
         <module>pubnub</module>
+        <module>qdrant</module>
         <module>quartz</module>
         <module>qute</module>
         <module>reactive-streams</module>
