jt400 com.ibm.as400.access.AS400 should be registered for runtime reinitialization #589

--- a/integration-tests/jt400/src/main/resources/application.properties
+++ b/integration-tests/jt400/src/main/resources/application.properties
@@ -14,7 +14,11 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-quarkus.test.flat-class-path = ${quarkus.test.flat-class-path}
+#quarkus.test.flat-class-path = ${quarkus.test.flat-class-path}
+
+# workaround for mocked tests, should be solvable by excluding mocked java files from compilation of skip-mock-tests profile
+# I can not make it work though, but to not block the native support by this, I'm setting flat path to true for all tests
+quarkus.test.flat-class-path = true
 
 #jt400 server connection information
 cq.jt400.url=${JT400_URL:system}
